Fix deprecated APIs and remove unused imports
- Replace deprecated URL constructors with URI-based alternatives
- Replace deprecated getNextTarEntry() with getNextEntry()
- Replace deprecated getFileNameString() with getFileName()
- Remove unused imports (ByteArrayInputStream, IOUtils.copy, TimeUnit)
- Fix resource leak in InputStreamWithCloseHookTest (use try-with-resources)
- Fix unchecked cast warning for ZipEntry enumeration
- Add @SuppressWarnings for intentional ZipFile resource handling in async context